# yolonas-cpp

./: .gitignore  .gitmodules  Dockerfile  README.md  download_models.bash  install.bash  install.sh  metadata.py
demo/: build.sh  main.cpp
demo/docker/: CMakeLists.txt  build.bash  main.cpp
demo/imageDetection/: build.bash  build.sh  main.cpp
demo/videoDetection/: build.bash  main.cpp
lib/: CMakeLists.txt
lib/cmake/: YoloNASConfig.cmake.in
lib/include/ukicomputers/: YoloNAS.hpp
lib/src/: YoloNAS.cpp
notebooks/: metadata.ipynb
